--- a/selenium-node-chrome-rc.yaml
+++ b/selenium-node-chrome-rc.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: selenium-node-chrome 
+  namespace: selenium
   labels:
     name: selenium-node-chrome
 spec:
-  replicas: 3
+  replicas: 0
   selector:
     name: selenium-node-chrome
   template:
